fix oveflow and text align

--- a/css/styles.css
+++ b/css/styles.css
@@ -885,7 +885,7 @@ input[type='checkbox'] {
 	position: absolute;
 	width: 6rem;
 	height: 6rem;
-	background: url('../images/hexagon-green.svg') center center no-repeat;
+	/* background: url('../images/hexagon-green.svg') center center no-repeat; */
 	background-size: 6rem 6rem;
 }
 
@@ -987,7 +987,7 @@ input[type='checkbox'] {
 /*************************/
 .accordion .area-1 {
 	height: 27rem;
-	background: url('../images/details-1-background.jpg') center center no-repeat;
+	/* background: url('../images/details-1-background.jpg') center center no-repeat; */
 	background-size: cover;
 }
 
@@ -1059,6 +1059,8 @@ input[type='checkbox'] {
 
 .accordion .accordion-body {
 	margin-left: 3.125rem;
+  overflow-y: auto;
+  max-height: 150px;
 }
 
 .accordion img{
@@ -1408,7 +1410,7 @@ input[type='checkbox'] {
 	width: 100%;
 	height: 100%;
 	background-color: #06050f;
-	opacity: 1;
+	opacity: 0.7;
 	text-align: center;
 	transition: all 0.3s;
 
@@ -1566,13 +1568,13 @@ input[type='checkbox'] {
 	left: 0;
 	width: 1.75rem;
 	height: 1.75rem;
-	background: url('../images/hexagon-green.svg') center center no-repeat;
+	/* background: url('../images/hexagon-green.svg') center center no-repeat; */
 	background-size: 1.75rem 1.75rem;
 	transition: all 0.2s ease;
 }
 
 .basic-2 .fa-stack:hover .hexagon {
-	background: url('../images/hexagon-white.svg') center center no-repeat;
+	/* background: url('../images/hexagon-white.svg') center center no-repeat; */
 	background-size: 1.75rem 1.75rem;
 }
 
@@ -1659,6 +1661,7 @@ input[type='checkbox'] {
 .form-2 {
 	padding-top: 6.625rem;
 	padding-bottom: 5.625rem;
+  text-align: center;
 	/* background-color: #06050f; */
 }
 
@@ -1707,13 +1710,13 @@ input[type='checkbox'] {
 	position: absolute;
 	width: 3.25rem;
 	height: 3.25rem;
-	background: url('../images/hexagon-green.svg') center center no-repeat;
+	/* background: url('../images/hexagon-green.svg') center center no-repeat; */
 	background-size: 3.25rem 3.25rem;
 	transition: all 0.2s ease;
 }
 
 .form-2 .fa-stack:hover .hexagon {
-	background: url('../images/hexagon-white.svg') center center no-repeat;
+	/* background: url('../images/hexagon-white.svg') center center no-repeat; */
 	background-size: 3.25rem 3.25rem;
 }
 
@@ -1783,7 +1786,7 @@ a.back-to-top {
 	width: 2.625rem;
 	height: 2.625rem;
 	border-radius: 1.875rem;
-	background: #beaa16 url("../images/up-arrow.png") no-repeat center 47%;
+	background: #beaa16 url("../img/up-arrow.png") no-repeat center 47%;
 	background-size: 1.125rem 1.125rem;
 	text-indent: -9999px;
 }
@@ -2068,13 +2071,13 @@ a:hover.back-to-top {
 		width: 1.625rem;
 		height: 1.625rem;
 		position: absolute;
-		background: url('../images/hexagon-green.svg') center center no-repeat;
+		/* background: url('../images/hexagon-green.svg') center center no-repeat; */
 		background-size: 1.625rem 1.625rem;
 		transition: all 0.2s ease;
 	}
 
 	.navbar-custom .fa-stack:hover .hexagon {
-		background: url('../images/hexagon-white.svg') center center no-repeat;
+		/* background: url('../images/hexagon-white.svg') center center no-repeat; */
 		background-size: 1.625rem 1.625rem;
 	}
 
@@ -2167,7 +2170,10 @@ a:hover.back-to-top {
 		width: 85%;
     color: #eee;
 	}
+  .accordion .accordion-body {
+      max-height: none;
 
+  }
 	/* end of details 1 */
 
 
